--- a/charts/actions-runner-controller/values.yaml
+++ b/charts/actions-runner-controller/values.yaml
@@ -147,7 +147,7 @@ githubWebhookServer:
     type: NodePort
     ports:
     - port: 80
-      targetPort: 8000
+      targetPort: http
       protocol: TCP
       name: http
       #nodePort: someFixedPortForUseWithTerraformCdkCfnEtc
