--- a/charts/actions-runner-controller/templates/githubwebhook.deployment.yaml
+++ b/charts/actions-runner-controller/templates/githubwebhook.deployment.yaml
@@ -41,7 +41,7 @@ spec:
           valueFrom:
             secretKeyRef:
               key: github_webhook_secret_token
-              name: {{- include "actions-runner-controller-github-webhook-server.secretName" . }}
+              name: {{ include "actions-runner-controller-github-webhook-server.secretName" . }}
               optional: true
         {{- range $key, $val := .Values.githubWebhookServer.env }}
         - name: {{ $key }}
