--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,6 +7,8 @@ on:
     paths-ignore:
     - 'runner/**'
     - .github/workflows/build-and-release-runners.yml
+    - '*.md'
+    - '.gitignore'
 
 jobs:
   test:
