--- a/.github/workflows/build-and-release-runners.yml
+++ b/.github/workflows/build-and-release-runners.yml
@@ -37,7 +37,7 @@ jobs:
     env:
       RUNNER_VERSION: 2.278.0
       DOCKER_VERSION: 19.03.12
-      DOCKERHUB_USERNAME: ${{ github.repository_owner }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USER }}
     steps:
       - name: Set outputs
         id: vars
@@ -58,7 +58,7 @@ jobs:
         uses: docker/login-action@v1
         if: ${{ github.event_name == 'push' || github.event_name == 'release' }}
         with:
-          username: ${{ github.repository_owner }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       - name: Build and Push Versioned Tags
@@ -88,7 +88,7 @@ jobs:
     env:
       RUNNER_VERSION: 2.277.1
       DOCKER_VERSION: 19.03.12
-      DOCKERHUB_USERNAME: ${{ github.repository_owner }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USER }}
     steps:
 
       - name: Checkout
@@ -106,7 +106,7 @@ jobs:
         uses: docker/login-action@v1
         if: ${{ github.event_name == 'push' || github.event_name == 'release' }}
         with:
-          username: ${{ github.repository_owner }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       - name: Build and Push Latest Tag
